Update the swagger document to be more meaningful
