# cmd/api/users.go
@@ -11,15 +11,29 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
-type userKey string
+type targetUserKey string
 
-const userCtx userKey = "user"
+const targetUserCtx targetUserKey = "targetUser"
 
+// GetUser godoc
+//
+//	@Summary		Fetches a user profile
+//	@Description	Fetches a user profile by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int	true	"User ID"
+//	@Success		200		{object}	store.User
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/{userID} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 
-	user := getUserCtx(r)
+	targetUser := getTargetUserCtx(r)
 
-	if err := app.jsonResponse(w, http.StatusOK, user); err != nil {
+	if err := app.jsonResponse(w, http.StatusOK, targetUser); err != nil {
 		app.InternaServerError(w, r, err)
 		return
 
@@ -27,28 +41,26 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 
 }
 
-type FollowerPayload struct {
-	FollowID int64
-	UserID   int64 `json:"user_id"`
-}
-
+// FollowUser godoc
+//
+//	@Summary		Follows a user
+//	@Description	Follows a user by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int		true	"User ID"
+//	@Success		204		{string}	string	"User followed"
+//	@Failure		400		{object}	error	"User payload missing"
+//	@Failure		404		{object}	error	"User not found"
+//	@Security		ApiKeyAuth
+//	@Router			/users/{userID}/follow [put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
+
+	targetUser := getTargetUserCtx(r)
 	user := getUserCtx(r)
 
-	// TODO: revert back to get User from Auth instead of ctx
-	var payload FollowerPayload
-	if err := readJSON(w, r, &payload); err != nil {
-		app.StatusBadRequest(w, r, err)
-		return
-	}
-
-	// This variable created to avoid confusion
-	var follower store.Followers
-	follower.FollowerID = user.ID
-	follower.UserID = payload.UserID
-
 	ctx := r.Context()
-	if err := app.store.Follower.FollowUser(ctx, follower.UserID, follower.FollowerID); err != nil {
+	if err := app.store.Follower.FollowUser(ctx, user.ID, targetUser.ID); err != nil {
 		app.InternaServerError(w, r, err)
 		return
 	}
@@ -60,24 +72,26 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 
 }
 
+// UnfollowUser gdoc
+//
+//	@Summary		Unfollow a user
+//	@Description	Unfollow a user by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int		true	"User ID"
+//	@Success		204		{string}	string	"User unfollowed"
+//	@Failure		400		{object}	error	"User payload missing"
+//	@Failure		404		{object}	error	"User not found"
+//	@Security		ApiKeyAuth
+//	@Router			/users/{userID}/unfollow [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 
+	targetUser := getTargetUserCtx(r)
 	user := getUserCtx(r)
 
-	// TODO: revert back to get User from Auth instead of ctx
-	var payload FollowerPayload
-	if err := readJSON(w, r, &payload); err != nil {
-		app.StatusBadRequest(w, r, err)
-		return
-	}
-
-	// This variable created to avoid confusion
-	var follower store.Followers
-	follower.FollowerID = user.ID
-	follower.UserID = payload.UserID
-
 	ctx := r.Context()
-	if err := app.store.Follower.UnfollowUser(ctx, follower.UserID, follower.FollowerID); err != nil {
+	if err := app.store.Follower.UnfollowUser(ctx, user.ID, targetUser.ID); err != nil {
 		app.InternaServerError(w, r, err)
 		return
 	}
@@ -88,25 +102,22 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 	}
 }
 
-func (app *application) GetUserMiddlewareContext(next http.Handler) http.Handler {
+func (app *application) GetTargetUserMiddlewareContext(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
-		idStr := chi.URLParam(r, "userID")
-		if idStr == "" {
+		targetUserStr := chi.URLParam(r, "userID")
+		if targetUserStr == "" {
 			app.StatusBadRequest(w, r, fmt.Errorf("missing userID"))
 			return
 		}
 
-		id, err := strconv.ParseInt(idStr, 10, 64)
-		if err != nil || id <= 0 {
+		targetUserId, err := strconv.ParseInt(targetUserStr, 10, 64)
+		if err != nil {
 			app.StatusBadRequest(w, r, err)
-			return
 		}
 
 		ctx := r.Context()
-
-		user, err := app.store.Users.GetUserbyID(ctx, id)
-
+		user, err := app.store.Users.GetUserbyID(ctx, targetUserId)
 		if err != nil {
 			switch {
 			case errors.Is(err, store.ErrRecordNotFound):
@@ -118,16 +129,15 @@ func (app *application) GetUserMiddlewareContext(next http.Handler) http.Handler
 			}
 		}
 
-		ctx = context.WithValue(ctx, userCtx, user)
+		ctx = context.WithValue(ctx, targetUserCtx, user)
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
 }
 
-func getUserCtx(r *http.Request) *store.User {
-	user, ok := r.Context().Value(userCtx).(*store.User)
-
+func getTargetUserCtx(r *http.Request) *store.User {
+	user, ok := r.Context().Value(targetUserCtx).(*store.User)
 	if !ok {
-		panic("expecting user store")
+		return nil
 	}
 	return user
 }
